feat: устанавливает зависимости и подключает шрифт

--- a/src/scss/global/fonts.scss
+++ b/src/scss/global/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: '';
-  src: url('/fonts/') format('woff2-variations'),
-    url('/fonts/') format('woff-variations'),
-    url('/fonts/') format('ttf-variations');
+  font-family: 'Roboto Flex';
+  src: url('/fonts/RobotoFlex-VariableFont.woff2') format('woff2-variations'),
+    url('/fonts/RobotoFlex-VariableFont.woff') format('woff-variations'),
+    url('/fonts/RobotoFlex-VariableFont.ttf') format('ttf-variations');
   font-weight: 100 900;
 }
