--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -16,7 +16,7 @@ $indent-small: 10px;
 $br-default: 8px; // example
 
 // fonts
-$base-font: 'font-family: Arial, Helvetica, sans-serif'; // example
+$base-font: 'Roboto Flex', 'Arial', sans-serif;
 
 // media
 $mobile-only: 779px;
