--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -2,8 +2,11 @@
 $primary: plum; // example
 $secondary: lime; // example
 $accent: cyan; // example
-$white: #fff;
-$black: #000;
+
+// colors default
+$white: #ffffff;
+$black: #000000;
+$transparent: rgba(255, 255, 255, 0);
 
 // indents
 $padding-x: 20px;
@@ -21,5 +24,5 @@ $base-font: 'Roboto Flex', 'Arial', sans-serif;
 // media
 $mobile-only: 779px;
 $tablet: 720px;
-$tablet-landscape: 1080px;
+$tablet-landscape: 1024px;
 $desktop: 1440px;
