--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -9,9 +9,10 @@ $black: #000000;
 $transparent: rgba(255, 255, 255, 0);
 
 // indents
-$padding-x: 20px;
-$padding-x-tablet: 30px;
-$padding-x-tablet-landscape: 50px;
+$padding-x: 4.35%;
+$padding-x-tablet: 4.17%;
+$padding-x-tablet-landscape: 2.78%;
+$padding-x-desktop: 40px;
 $indent: 20px;
 $indent-small: 10px;
 
