--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -1,14 +1,22 @@
 doctype html
-html
-    head
-        meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width")
-        title=title
-body
+include /components/components.pug
+
+block variables
+
+html(lang="ru")
+  head
+      title= title
+      meta(charset="utf-8")
+      meta(name="viewport", content="width=device-width, initial-scale=1.0")
+      meta(http-equiv="X-UA-Compatible", content="ie=edge")
+      meta(name="description", content="Интернет магазин")
+
+  body
     include /components/layout/header.pug
 
+
     main(class=className)
-        block pageContent
+      block pageContent
 
     include /components/layout/footer.pug
     script(src="/src/js/app.js" type="module")
