feat: создаёт блок интро с карточкой и миксин кнопки

--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -3,4 +3,6 @@ mixin intro()
   section.intro&attributes(attributes)
     .wrapper
       .intro__container
-        p Секция вступление - Слайдер с пангинацией
+        h2.visually-hidden Оцените приоритеты нашего магазина
+
+        +intro-cards()
