--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,9 +2,7 @@ extends /layouts/main.pug
 
 block pageContent
 
-  section
-    .wrapper
-      | Section
+  h1.visually-hidden Главная страница интернет магазина
 
   +intro().page-home__intro
   +advantages().page-home__advantages
