--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -1,3 +1,7 @@
 //- Blocks
 include ./blocks/intro.pug
+include ./blocks/intro-cards.pug
 include ./blocks/advantages.pug
+
+//- Mixins
+include ./mixins/btn.pug
