--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,7 +1,9 @@
 // colors
-$primary: plum; // example
+$primary: #623061;
 $secondary: lime; // example
 $accent: cyan; // example
+$bg-intro: #055b5c;
+$accent-title: #fecb5e;
 
 // colors default
 $white: #ffffff;
