fix: правит заглавия

--- a/src/components/blocks/intro-cards.pug
+++ b/src/components/blocks/intro-cards.pug
@@ -2,8 +2,8 @@ mixin intro-cards()
 
   .intro-cards&attributes(attributes)
     .intro-cards__container
-      .intro-cards__title
-        h3
+      .title.title--big.title--accent.intro-cards__title
+        h1
           | Безопасность и качество – наш приоритет
           | #[em с 1996 года!]
 
