--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -1,7 +1,30 @@
 .title {
-}
+  font-style: normal;
+  line-height: 120%;
 
-.title--big {
+  &--big {
+    font-weight: 600;
+    font-size: 36px;
+
+    @include vp-tablet {
+      font-size: 42px;
+    }
+  }
+
+  &--accent {
+    em {
+      font-style: inherit;
+      color: $accent-title;
+    }
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-style: inherit;
+    line-height: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    margin: 0;
+  }
 }
 
 .title--medium {
