fix: правит блок интро

--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -3,4 +3,13 @@ mixin intro()
   section.intro&attributes(attributes)
     .wrapper
       .intro__container
-        +intro-cards()
+        ul.intro__cards
+
+          li.intro__card
+            .title.title--big.title--accent.intro-card__title
+              h1
+                | Безопасность и качество – наш приоритет
+                | #[em с 1996 года!]
+
+            +btn({href: "#"}).btn--border-dashed.intro-cards__btn(aria-label="Перейти к сертификатам.")
+              span Сертификаты продукции
