--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@
 // BLOCKS
 // common..
 // page-name..
-@import 'blocks/intro-cards.scss';
+@import 'blocks/intro.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
