--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,6 +4,7 @@ $secondary: lime; // example
 $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
+$blur-bg: #fff4fe;
 
 // colors default
 $white: #ffffff;
