--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -6,10 +6,14 @@ mixin intro()
         ul.intro__cards
 
           li.intro__card
-            .title.title--big.title--accent.intro-card__title
-              h1
-                | Безопасность и качество – наш приоритет
-                | #[em с 1996 года!]
+            .intro__card-context
+              .title.title--big.title--accent.intro__card-title
+                h1
+                  | Безопасность#[br]и&nbsp;качество&nbsp;– наш приоритет#[br]
+                  | #[em с&nbsp;1996&nbsp;года!]
 
-            +btn({href: "#"}).btn--border-dashed.intro-cards__btn(aria-label="Перейти к сертификатам.")
-              span Сертификаты продукции
+              +btn({href: "#"}).btn--border-dashed.intro__card-btn(aria-label="Перейти к сертификатам.")
+                span Сертификаты продукции
+
+            .intro__image
+              img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
