--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -19,9 +19,11 @@ body {
   grid-template-rows: min-content 1fr min-content;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: $white;
 }
 
 img {
+  display: block;
   width: 100%;
   height: auto;
 }
