feat(intro): добавляет в список карточки

--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -19,6 +19,34 @@ mixin intro()
               .intro__image
                 img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
 
+            li.intro__card.swiper-slide
+              .intro__card-context
+                .title.title--big.title--accent.intro__card-title
+                  h1
+                    | Безопасность#[br]и&nbsp;качество&nbsp;– наш приоритет#[br]
+                    | #[em с&nbsp;1996&nbsp;года!]
+
+                +btn({href: "#"}).btn--border-dashed.intro__card-btn(aria-label="Перейти к сертификатам.")
+                  span Сертификаты продукции
+
+              .intro__image
+                img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
+
+            li.intro__card.swiper-slide
+              .intro__card-context
+                .title.title--big.title--accent.intro__card-title
+                  h1
+                    | Безопасность#[br]и&nbsp;качество&nbsp;– наш приоритет#[br]
+                    | #[em с&nbsp;1996&nbsp;года!]
+
+                +btn({href: "#"}).btn--border-dashed.intro__card-btn(aria-label="Перейти к сертификатам.")
+                  span Сертификаты продукции
+
+              .intro__image
+                img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
+
+
+
           .intro__pagination.swiper-pagination
 
           .intro__btn-prev.swiper-button-prev
