fix(intro): правит работу свайпера адаптация к вьюпорту

--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -6,9 +6,9 @@ mixin intro()
 
         .intro__swiper.swiper
 
-          ul.intro__cards.swiper-wrapper
+          .intro__cards.swiper-wrapper
 
-            li.swiper-slide
+            .swiper-slide
               .intro__card
                 .intro__card-context
                   .title.title--big.title--accent.intro__card-title
@@ -22,7 +22,7 @@ mixin intro()
                 .intro__image
                   img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
 
-            li.swiper-slide
+            .swiper-slide
               .intro__card
                 .intro__card-context
                   .title.title--big.title--accent.intro__card-title
@@ -36,7 +36,7 @@ mixin intro()
                 .intro__image
                   img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
 
-            li.swiper-slide
+            .swiper-slide
               .intro__card
                 .intro__card-context
                   .title.title--big.title--accent.intro__card-title
@@ -50,8 +50,8 @@ mixin intro()
                 .intro__image
                   img(src='/images/intro.png', width='456', height='470', alt='Сертефицированный товар магазина')
 
-
-          .intro__btn-prev.swiper-button-prev
-          .intro__btn-next.swiper-button-next
+          .navigation-swiper
+            .navigation-swiper__btn-prev.swiper-button-prev
+            .navigation-swiper__btn-next.swiper-button-next
 
           .intro__pagination.swiper-pagination
