--- a/src/scss/blocks/intro.scss
+++ b/src/scss/blocks/intro.scss
@@ -1,18 +1,9 @@
 .intro {
-  /*&__container {
-    position: relative;
-    display: flex;
-  }
-
-  &__swiper {
-    position: absolute;
-    padding: 50%;
-  }*/
+  max-width: 100vw;
 
   &__cards {
-    //display: flex;
     color: $white;
-    //width: 100%;
+    width: 100%;
 
     list-style-type: none;
     padding-left: 0;
@@ -24,7 +15,7 @@
 
     background: $bg-intro;
     border-radius: 8px;
-    //width: 100%;
+    max-width: 100%;
 
     padding: 14.29% 5.29% 15.88%;
 
@@ -40,6 +31,8 @@
   }
 
   &__card-context {
+    max-width: 100%;
+
     @include vp-tablet-landscape {
       padding-top: 24.13%;
       padding-bottom: 19.01%;
@@ -58,6 +51,7 @@
   }
 
   &__image {
+    max-width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -70,7 +64,6 @@
     @include vp-tablet-landscape {
       justify-content: center;
       width: 100%;
-      //height: auto;
       max-width: 456px;
       padding: 0;
       margin-left: auto;
@@ -79,6 +72,7 @@
     &::before {
       content: "";
       position: absolute;
+      display: flex;
       width: 259px;
       height: 259px;
       border-radius: 50%;
