--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -17,10 +17,20 @@ body {
   display: grid;
   // grid-template-rows: 1fr min-content;
   grid-template-rows: min-content 1fr min-content;
+
+  // display: flex;
+  // flex-direction: column;
+
   min-height: 100vh;
   overflow-x: hidden;
   background-color: $white;
 }
+
+/*
+main {
+  flex-grow: 1;
+}
+*/
 
 img {
   display: block;
