--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -5,6 +5,7 @@ $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
 $blur-bg: #fff4fe;
+$base-navigation: #111111;
 
 // colors default
 $white: #ffffff;
