--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 // UI
 @import 'ui/btn.scss';
 @import 'ui/title.scss';
+@import 'ui/navigation-swiper.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
