feat(intro): добавляет стили пагинации

--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -54,4 +54,5 @@ mixin intro()
             .navigation-swiper__btn-prev.swiper-button-prev
             .navigation-swiper__btn-next.swiper-button-next
 
-          .intro__pagination.swiper-pagination
+          .intro__pagination
+            .swiper-pagination
