--- a/src/scss/blocks/intro.scss
+++ b/src/scss/blocks/intro.scss
@@ -120,4 +120,27 @@
     }
 
   }
+
+  &__pagination {
+    .swiper-pagination {
+      margin-bottom: 28px;
+    }
+
+    .swiper-pagination-bullet {
+      width: 10px;
+      height: 10px;
+      background-color: $white;
+      opacity: 0.5;
+    }
+
+    .swiper-pagination-bullet-active {
+      opacity: 1;
+    }
+
+    .swiper-pagination-horizontal.swiper-pagination-bullets {
+      .swiper-pagination-bullet {
+        margin: 0 8px;
+      }
+    }
+  }
 }
