feat: добавляет навигации свайпера активный фокус кнопкам

--- a/src/components/ui/navigation-swiper.pug
+++ b/src/components/ui/navigation-swiper.pug
@@ -1,5 +1,5 @@
 mixin navigation-swiper()
 
   .navigation-swiper&attributes(attributes)
-    .navigation-swiper__btn-prev.swiper-button-prev
-    .navigation-swiper__btn-next.swiper-button-next
+    .navigation-swiper__btn-prev.swiper-button-prev(tabindex="0")
+    .navigation-swiper__btn-next.swiper-button-next(tabindex="0")
