fix: правит грамматику

--- a/src/components/blocks/advantages.pug
+++ b/src/components/blocks/advantages.pug
@@ -3,4 +3,4 @@ mixin advantages()
   section.advantages&attributes(attributes)
     .wrapper
       .advantages__container
-        p Секция приемуществ - Слайдер карточек
+        p Секция преимуществ - Слайдер карточек
