--- a/src/components/blocks/intro.pug
+++ b/src/components/blocks/intro.pug
@@ -51,7 +51,7 @@ mixin intro()
                       span!= option.btnText
 
                   .intro__image
-                    img(src=option.image, width='456', height='470', alt='Сертефицированный товар магазина')
+                    img(src=option.image, width='456', height='470', alt='Сертифицированный товар магазина')
 
           +navigation-swiper()
 
