fix: присваивает блокам дугие директории

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -1,6 +1,10 @@
-//- Blocks
-include ./blocks/intro.pug
-include ./blocks/advantages.pug
+//- BLOCKS -
+
+//- common..
+
+//- page-name..
+include ./blocks/index/intro.pug
+include ./blocks/index/advantages.pug
 
 
 //- UI
