--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,8 +4,9 @@ $secondary: lime; // example
 $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
+$accent-bg: #f7f7f7;
 $blur-bg: #fff4fe;
-$accent-active: #111111;
+$base: #111111;
 
 // colors default
 $white: #ffffff;
