--- a/src/scss/blocks/index/advantages.scss
+++ b/src/scss/blocks/index/advantages.scss
@@ -1,3 +1,50 @@
 .advantages {
+  max-width: 100vw;
+  color: $base;
 
+  &__cards {
+    display: flex;
+  }
+
+  &__card {
+    background-color: $accent-bg;
+    border-radius: 8px;
+    width: 85.983%;
+
+    @include vp-tablet {
+      width: 60.61%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 29.412%;
+    }
+  }
+
+  &__content{
+    padding: 9.232% 6.155% 8.924%;
+
+
+    @include vp-tablet {
+      padding: 7.5% 7% 9.5%;
+    }
+  }
+
+  &__card-title {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom:12px;
+  }
+
+  &__card-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 130%;
+    color: rgba($base, 0.5);
+    }
+
+  &__card-icon {
+    color: $primary;
+    margin-bottom: 7px;
+  }
 }
