feat(advantages): создаёт работу свайпера и его навигацию

--- a/src/components/blocks/index/advantages.pug
+++ b/src/components/blocks/index/advantages.pug
@@ -44,4 +44,4 @@ mixin advantages()
                     .text.advantages__card-text
                       p!= option.text
 
-          //- +navigation-swiper()
+          +navigation-swiper().navigation-swiper--btn-secondary
