--- a/src/scss/blocks/index/advantages.scss
+++ b/src/scss/blocks/index/advantages.scss
@@ -2,13 +2,21 @@
   max-width: 100vw;
   color: $base;
 
+  .swiper-slide {
+    display: grid;
+    width: 100%;
+    min-height: 100%;
+  }
+
   &__cards {
     display: flex;
+    width: 100%;
   }
 
   &__card {
     background-color: $accent-bg;
     border-radius: 8px;
+    min-width: 100%;
     width: 85.983%;
 
     @include vp-tablet {
@@ -21,6 +29,8 @@
   }
 
   &__content{
+    display: flex;
+    flex-direction: column;
     padding: 9.232% 6.155% 8.924%;
 
 
@@ -41,6 +51,7 @@
     font-size: 14px;
     line-height: 130%;
     color: rgba($base, 0.5);
+    margin-bottom: auto;
     }
 
   &__card-icon {
