feat: создаёт блок производители с компонентами img и slider

--- a/src/components/blocks/index/advantages.pug
+++ b/src/components/blocks/index/advantages.pug
@@ -41,7 +41,7 @@ mixin advantages()
                     .title.title--small.advantages__card-title
                       h3!= option.title
 
-                    .text.advantages__card-text
+                    .text.text--small.advantages__card-text
                       p!= option.text
 
           +navigation-swiper().navigation-swiper--btn-secondary
