--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -1,13 +1,16 @@
 //- BLOCKS -
 
 //- common..
+include ./blocks/common/manufacturers
 
 //- page-name..
-include ./blocks/index/intro.pug
-include ./blocks/index/advantages.pug
+include ./blocks/index/intro
+include ./blocks/index/advantages
 
 
 //- UI
-include ./ui/icon.pug
-include ./ui/btn.pug
-include ./ui/navigation-swiper.pug
+include ./ui/icon
+include ./ui/img
+include ./ui/btn
+include ./ui/navigation-swiper
+include ./ui/slider-image
