--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -6,6 +6,7 @@ $bg-intro: #055b5c;
 $accent-title: #fecb5e;
 $accent-bg: #f7f7f7;
 $blur-bg: #fff4fe;
+$border-fill: #e2e3e5;
 $base: #111111;
 
 // colors default
