--- a/src/scss/ui/slider-image.scss
+++ b/src/scss/ui/slider-image.scss
@@ -1,6 +1,4 @@
-.advantages {
-  max-width: 100vw;
-  color: $base;
+.slider-image {
 
   .swiper-slide {
     display: grid;
@@ -14,8 +12,11 @@
   }
 
   &__card {
-    background-color: $accent-bg;
+    box-sizing: border-box;
+    border: 1px solid $border-fill;
     border-radius: 8px;
+
+    background-color: $white;
     min-width: 100%;
     width: 85.983%;
 
@@ -37,20 +38,9 @@
     @include vp-tablet {
       padding: 7.5% 7% 9.5%;
     }
-  }
 
-  &__card-title {
-    margin-bottom:12px;
-  }
-
-  &__card-text {
-    line-height: 130%;
-    color: rgba($base, 0.5);
-    margin-bottom: auto;
-  }
-
-  &__card-icon {
-    color: $primary;
-    margin-bottom: 7px;
+    img {
+      max-width: 100%;
+    }
   }
 }
