--- a/src/scss/pages/page-home.scss
+++ b/src/scss/pages/page-home.scss
@@ -25,4 +25,12 @@
       margin-bottom: 100px;
     }
   }
+
+  &__manufacturers {
+    margin-bottom: 40px;
+
+    @include vp-tablet {
+      margin-bottom: 50px;
+    }
+  }
 }
