--- a/src/scss/ui/slider-image.scss
+++ b/src/scss/ui/slider-image.scss
@@ -1,10 +1,12 @@
 .slider-image {
+  width: 100%;
+  height: fit-content;
 
-  /*.swiper-slide {
+  .swiper-slide {
     display: grid;
     width: 100%;
-    min-height: 100%;
-  }*/
+    height: 100%;
+  }
 
   &__cards {
     display: flex;
@@ -16,7 +18,7 @@
     border: 1px solid $border-fill;
     border-radius: 8px;
 
-    // min-width: 100%;
+    min-width: 100%;
     width: 57.142%;
 
     @include vp-tablet {
