feat(slider-image): настраивает работу картинки при наведении

--- a/src/scss/global/mixins.scss
+++ b/src/scss/global/mixins.scss
@@ -4,6 +4,14 @@
   margin: 0;
 }
 
+@mixin hover {
+  @media (hover: hover) {
+    &:hover:not(.focus-visible) {
+      @content;
+    }
+  }
+}
+
 @mixin hover-focus {
   @media (hover: hover) {
     &:hover:not(.focus-visible) {
