--- a/src/scss/ui/slider-image.scss
+++ b/src/scss/ui/slider-image.scss
@@ -28,6 +28,12 @@
     @include vp-tablet-landscape {
       width: 15.882%;
     }
+
+    @include hover {
+      img {
+        transform: scale(1.1);
+      }
+    }
   }
 
   &__content{
@@ -36,7 +42,6 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    //width: 100%;
     padding: 33.68%;
 
 
@@ -64,6 +69,9 @@
 
       background-color: $white;
       margin: 0;
+
+      user-select: none;
+      transition: transform $trans-default;
     }
   }
 }
