feat(confidence): создаёт блок доверие

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -2,6 +2,7 @@
 
 //- common..
 include ./blocks/common/manufacturers
+include ./blocks/common/confidence
 
 //- page-name..
 include ./blocks/index/intro
