--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,3 +5,5 @@ block pageContent
   +intro().page-home__intro
   +advantages().page-home__advantages
   +manufacturers().page-home__manufacturers
+
+  +confidence().page-home__confidence
