--- a/src/scss/pages/page-home.scss
+++ b/src/scss/pages/page-home.scss
@@ -33,4 +33,12 @@
       margin-bottom: 50px;
     }
   }
+
+  &__confidence {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
 }
