--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 
 // common...
 @import 'blocks/common/manufacturers.scss';
+@import 'blocks/common/confidence.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
