feat(company): создаёт блок о компании

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -3,6 +3,7 @@
 //- common..
 include ./blocks/common/manufacturers
 include ./blocks/common/confidence
+include ./blocks/common/company
 
 //- page-name..
 include ./blocks/index/intro
