--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,4 +6,5 @@ block pageContent
   +advantages().page-home__advantages
   +manufacturers().page-home__manufacturers
 
+  +company().page-home__company
   +confidence().page-home__confidence
