feat(link): создаёт компонент линк

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -14,5 +14,6 @@ include ./blocks/index/advantages
 include ./ui/icon
 include ./ui/img
 include ./ui/btn
+include ./ui/link
 include ./ui/navigation-swiper
 include ./ui/slider-image
