--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 
 // UI
 @import 'ui/btn.scss';
+@import 'ui/link.scss';
 @import 'ui/title.scss';
 @import 'ui/text.scss';
 @import 'ui/navigation-swiper.scss';
