--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -5,6 +5,7 @@ $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
 $accent-bg: #f7f7f7;
+$accent-link: #e72222;
 $blur-bg: #fff4fe;
 $border-fill: #e2e3e5;
 $base: #111111;
