--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,7 @@
 // common...
 @import 'blocks/common/manufacturers.scss';
 @import 'blocks/common/confidence.scss';
+@import 'blocks/common/company.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
