--- a/src/scss/blocks/common/company.scss
+++ b/src/scss/blocks/common/company.scss
@@ -1,15 +1,78 @@
 .company {
   max-width: 100vw;
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__context {
+    display: grid;
+    grid-template-columns: 40% auto;
+    gap: 37px;
+    margin-bottom: 50px;
+  }
+
+  &__text {
+    width: 70%;
+    p {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__link {
+    display: flex;
+    width: fit-content;
+
+    &::after {
+      content: "";
+      display: block;
+      width: 6px;
+      height: 11px;
+      margin-left: 6px;
+      margin-top: auto;
+      margin-bottom: auto;
+
+      mask-repeat: no-repeat;
+      mask-position: center;
+      mask-image: url("/images/icon-arrow.svg");
+
+      background: currentColor;
+      background-size: contain;
+      background-position: center;
+      transform: rotate(180deg);
+    }
+  }
+
+
+  &__bg-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 324px;
+    grid-template-rows: auto;
+    gap: 50px;
+  }
+
   &__bg-list{
+    color: $white;
+    display: flex;
+    flex-wrap: wrap;
     padding: 0;
     margin: 0;
     list-style: none;
+
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    z-index: 2;
+    margin-top: auto;
+    margin-left: 50px;
+    margin-bottom: 30px;
   }
 
   &__bg-item {
     display: flex;
     flex-direction: column;
+
+    margin-right: 60px;
 
     i {
       font-style: normal;
@@ -25,10 +88,76 @@
     }
   }
 
+
+  &__link-address {
+    grid-column: 2 / -1;
+    grid-row: 1 / -1;
+    z-index: 2;
+
+    margin-top: auto;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+
   &__address {
+    display: flex;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 130%;
+    color: $base;
+
+    padding: 15px 24px;
+
+    background-color: $accent-bg-items;
+    border-radius: 8px;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 40px;
+      height: 40px;
+      background-image: url("/images/icon-address.svg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    span {
+      display: block;
+      max-width: 187px;
+      margin-left: 16px;
+    }
+  }
+
+
+  &__bg-image {
+    width: 100%;
+    display: block;
+    position: relative;
+    overflow: hidden;
+
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+
+
+    @include vp-desktop {
+      height: 390px;
+    }
+
+    img {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: auto;
+      margin: 0;
+
+      @include vp-desktop {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
   }
 }
