--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,6 +4,7 @@ $secondary: lime; // example
 $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
+$accent-bg-items: #ffdf85;
 $accent-bg: #f7f7f7;
 $accent-link: #e72222;
 $blur-bg: #fff4fe;
