--- a/src/scss/blocks/common/company.scss
+++ b/src/scss/blocks/common/company.scss
@@ -140,13 +140,20 @@
     grid-column: 1 / -1;
     grid-row: 1 / -1;
 
-
     @include vp-desktop {
       height: 390px;
     }
 
-    img {
+    &::before {
+      content: "";
       position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(rgba($black, 0.3), rgba($black, 0.3));
+    }
+
+    img {
+      //position: absolute;
       display: block;
       width: 100%;
       height: auto;
